--- a/projeto/css/style-teste.css
+++ b/projeto/css/style-teste.css
@@ -205,9 +205,10 @@ header {
   left: 0;
   top: 0;
   width: 100%;
-  padding: 20px 30px;
+  padding: 12px 20px 0px;
   z-index: 99999999;
   border-bottom: 1px solid rgba(255, 255, 255, 0);
+  background-image: linear-gradient(#071a58 -34%, #1c3ba0 84%, #103bbf 100%);
 }
 @media (max-width: 767px) {
   header.header {
@@ -224,10 +225,7 @@ header.header.sticky {
   -webkit-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  border-bottom: 1px solid #ededed;
   background-color: #fff;
-  padding: 12px 20px 5px;
-  background-image: linear-gradient(#071a58 -34%, #1c3ba0 84%, #103bbf 100%);
 }
 
 .sticky2 {
@@ -402,7 +400,7 @@ header.sticky .search-inner, header.sticky .search-inner::before, header.sticky 
   #logo {
     float: none;
     position: absolute;
-    top: 0;
+    top: -10px;
     left: 0;
     width: 100%;
     text-align: center;
